bugs time, style for width-425px devices

--- a/src/pages/Home/components/ThisDay/ThisDay.module.scss
+++ b/src/pages/Home/components/ThisDay/ThisDay.module.scss
@@ -46,10 +46,11 @@
     }
 }
 
-@media (max-width:320px){
+@media (max-width:425px){
     .conteiner{
         border-radius: 0;
         box-shadow: none;
+        max-width: 425px;
     }
     .top{
         margin-bottom: 10px;
